--- a/src/components/Article.css
+++ b/src/components/Article.css
@@ -1,3 +1,7 @@
+.article {
+  margin-bottom: 20px;
+}
+
 .article h2 {
   display: flex;
   flex-direction: row;
@@ -18,7 +22,7 @@
 
 .article .votes {
   padding: 10px 20px;
-  background-color: #f7f7f7;
+  background-color: var(--lightGrey);
 }
 
 .article .author {
