--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 :root {
+  --lightGrey: #f7f7f7;
+  --darkGrey: #4c6272;
+  --links: #005eb8;
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  /* color-scheme: light dark; */
-  /* color: rgba(255, 255, 255, 0.87); */
-  /* background-color: #242424; */
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,11 +14,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--links);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--links);
 }
 
 body {
@@ -31,4 +30,8 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.clearfix {
+  clear: both;
 }
