--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   --lightGrey: #f7f7f7;
   --darkGrey: #4c6272;
   --links: #005eb8;
+  --red: #d5281b;
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
