--- a/src/components/Comments.css
+++ b/src/components/Comments.css
@@ -31,3 +31,18 @@
   color: var(--darkGrey);
   font-size: 12px;
 }
+
+.comments-list li article .delete-comment-button {
+  background-color: var(--red);
+  box-shadow: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 5px;
+}
+
+.comments-list li article .delete-comment-button:disabled {
+  opacity: 0.7;
+  cursor: default;
+}
