--- a/src/components/Comments.css
+++ b/src/components/Comments.css
@@ -32,6 +32,10 @@
   font-size: 12px;
 }
 
+.comments-list li article .comment-body {
+  padding: 0 5px;
+}
+
 .comments-list li article .delete-comment-button {
   background-color: var(--red);
   box-shadow: none;
