Add img alt tag and address article card layout issue

--- a/src/components/Articles.css
+++ b/src/components/Articles.css
@@ -27,6 +27,7 @@
 .articles-list li {
   background-color: var(--lightGrey);
   border-radius: 10px;
+  display: flex;
 }
 
 .articles-list li article {
