--- a/src/components/SubNav.css
+++ b/src/components/SubNav.css
@@ -1,14 +1,19 @@
+.sub-nav {
+  border-bottom: 2px solid var(--lightGrey);
+  padding-bottom: 10px;
+}
+
 .sub-nav-list {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
-  gap: 15px;
+  justify-content: space-around;
 }
 
 .sub-nav-list li a {
   text-transform: capitalize;
-  padding: 5px 10px;
+  padding: 5px 15px;
   border-radius: 15px;
 }
 
