--- a/src/components/Article.css
+++ b/src/components/Article.css
@@ -33,6 +33,8 @@
   margin: 0 15px 15px 0;
   width: 100%;
   max-width: 500px;
+  border-left: 20px solid #000;
+  border-right: 20px solid #000;
 }
 
 .article .votes {
