--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,10 @@ main {
 }
 
 footer {
-  background-color: var(--darkGrey);
+  background-color: var(--text);
   color: white;
   padding: 10px 20px;
+  border-radius: 5px 5px 0 0;
 }
 
 footer p {
