Disable likes for article author

--- a/src/components/Article.css
+++ b/src/components/Article.css
@@ -75,6 +75,11 @@
   font-weight: 700;
 }
 
+.article .votes .voting-buttons button:disabled {
+  opacity: 0.5;
+  cursor: default;
+}
+
 .article .votes .voting-buttons .up-vote {
   background-color: var(--green);
 }
